--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "apexcharts": "3.36.3",
-    "axios": "^1.2.5",
+    "axios": "^1.5.0",
     "axios-mock-adapter": "^1.21.2",
+    "bcryptjs": "^2.4.3",
     "chance": "^1.1.9",
     "date-fns": "^2.29.3",
     "emoji-picker-react": "^4.4.7",
     "i18next": "^22.4.9",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "next": "13.4.12",
@@ -38,6 +40,7 @@
     "react-dom": "18.2.0",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.3.0",
+    "react-hot-toast": "^2.4.1",
     "react-i18next": "^12.1.4",
     "react-intersection-observer": "^9.4.1",
     "react-redux": "^8.0.5",
