--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   },
   "devDependencies": {
     "@types/chance": "^1.1.3",
+    "@types/cookie": "^0.5.2",
     "@types/lodash": "^4.14.194",
     "@types/node": "latest",
     "@types/react": "18.2.18",
