--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-i18next": "^12.1.4",
     "react-intersection-observer": "^9.4.1",
     "react-redux": "^8.0.5",
+    "react-spinners": "^0.13.8",
     "react-spring": "^9.6.1",
     "simplebar-react": "^3.2.0",
     "stylis-plugin-rtl": "^2.1.1",
@@ -57,6 +58,7 @@
     "@types/node": "latest",
     "@types/react": "18.2.18",
     "@types/react-helmet": "^6.1.6",
+    "@types/react-spinkit": "^3.0.7",
     "eslint": "latest",
     "eslint-config-next": "latest",
     "typescript": "latest"
