--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@mui/x-date-pickers": "^5.0.15",
     "@reduxjs/toolkit": "^1.9.3",
     "@tabler/icons-react": "^2.1.1",
+    "@tanstack/react-query": "^4.35.3",
+    "@tanstack/react-query-devtools": "^4.35.3",
     "@types/node": "20.2.3",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
