--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "chance": "^1.1.9",
     "date-fns": "^2.29.3",
     "emoji-picker-react": "^4.4.7",
+    "formik": "^2.4.5",
     "i18next": "^22.4.9",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
@@ -42,6 +43,7 @@
     "react-dom": "18.2.0",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.3.0",
+    "react-hook-form": "^7.46.2",
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^12.1.4",
     "react-intersection-observer": "^9.4.1",
