--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@date-io/date-fns": "^2.17.0",
     "@emotion/cache": "latest",
     "@emotion/react": "latest",
     "@emotion/server": "latest",
@@ -30,10 +31,11 @@
     "axios-mock-adapter": "^1.21.2",
     "bcryptjs": "^2.4.3",
     "chance": "^1.1.9",
-    "date-fns": "^2.29.3",
+    "date-fns": "^2.30.0",
     "emoji-picker-react": "^4.4.7",
     "formik": "^2.4.5",
     "i18next": "^22.4.9",
+    "jalali-moment": "^3.3.11",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
