--- a/package.json
+++ b/package.json
@@ -33,17 +33,21 @@
     "chance": "^1.1.9",
     "date-fns": "^2.30.0",
     "emoji-picker-react": "^4.4.7",
+    "flatpickr": "^4.6.13",
     "formik": "^2.4.5",
     "i18next": "^22.4.9",
     "jalali-moment": "^3.3.11",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
+    "moment-jalaali": "^0.10.0",
     "next": "13.4.12",
     "nextjs-toploader": "^1.4.2",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
+    "react-datepicker": "^4.18.0",
     "react-dom": "18.2.0",
+    "react-flatpickr": "^3.10.13",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.46.2",
@@ -62,8 +66,11 @@
     "@types/chance": "^1.1.3",
     "@types/cookie": "^0.5.2",
     "@types/lodash": "^4.14.194",
+    "@types/moment-jalaali": "^0.7.6",
     "@types/node": "latest",
     "@types/react": "18.2.18",
+    "@types/react-datepicker": "^4.15.0",
+    "@types/react-flatpickr": "^3.8.8",
     "@types/react-helmet": "^6.1.6",
     "@types/react-spinkit": "^3.0.7",
     "eslint": "latest",
