--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "nextjs-toploader": "^1.4.2",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
+    "react-big-calendar": "^1.8.4",
     "react-datepicker": "^4.18.0",
     "react-dom": "18.2.0",
     "react-flatpickr": "^3.10.13",
@@ -69,6 +70,7 @@
     "@types/moment-jalaali": "^0.7.6",
     "@types/node": "latest",
     "@types/react": "18.2.18",
+    "@types/react-big-calendar": "^1.6.4",
     "@types/react-datepicker": "^4.15.0",
     "@types/react-flatpickr": "^3.8.8",
     "@types/react-helmet": "^6.1.6",
