--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-datepicker": "^4.18.0",
     "react-dom": "18.2.0",
     "react-flatpickr": "^3.10.13",
+    "react-fullcalendar": "^1.0.0",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.46.2",
