--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/lab": "^5.0.0-alpha.117",
     "@mui/material": "latest",
     "@mui/x-date-pickers": "^5.0.15",
+    "@neshan-maps-platform/react-openlayers": "^2.0.16",
     "@next/font": "^13.5.2",
     "@reduxjs/toolkit": "^1.9.3",
     "@tabler/icons-react": "^2.1.1",
