--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build --no-lint",
     "start": "next start",
     "lint": "next lint"
   },
@@ -58,6 +58,7 @@
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^12.1.4",
     "react-intersection-observer": "^9.4.1",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.0.5",
     "react-spinners": "^0.13.8",
     "react-spring": "^9.6.1",
