--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "moment": "^2.29.4",
     "moment-jalaali": "^0.10.0",
     "next": "13.4.12",
+    "next-auth": "^4.23.1",
     "nextjs-toploader": "^1.4.2",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
