--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "next": "13.4.12",
+    "next-auth": "^4.23.1",
     "nextjs-toploader": "^1.4.2",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
