--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "next": "13.4.12",
+    "next-auth": "^4.23.1",
     "nextjs-toploader": "^1.4.2",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
@@ -42,6 +43,7 @@
     "react-i18next": "^12.1.4",
     "react-intersection-observer": "^9.4.1",
     "react-redux": "^8.0.5",
+    "react-spinners": "^0.13.8",
     "react-spring": "^9.6.1",
     "simplebar-react": "^3.2.0",
     "stylis-plugin-rtl": "^2.1.1",
